# Novel-Crawler

./: .dockerignore  .gitignore  CHANGELOG.md  COMPLIANCE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  calibrate.py  decode_font.py  download_novel.py  font_decode_map.json  main.py  merge_final.py  pyproject.toml  verify_parts.py
.github/workflows/: build.yml  ci.yml
.superpowers/sdd/: phase1-final-fixes-report.md  phase1-task1-report.md  phase1-task2-report.md  phase1-task3-report.md
docs/: API.md  ARCHITECTURE.md  CLI.md  CONFIG.md  DEVELOPMENT.md  EXPLORATORY_CRAWLING.md  REGISTRY.md  SITE_ADAPTATION.md  USER_GUIDE.md
docs/easyvoice/: OUTPUT_EXAMPLE.md  README.md
integrations/easyvoice/: novel_tts_pipeline.py
novel_crawler/: __init__.py  cli.py  compliance.py  domains.py  easyvoice.py  exploration.py  verification.py
novel_crawler/acquisition/: __init__.py  classifier.py  http.py  models.py  security.py  visible_browser.py
novel_crawler/adaptation/: __init__.py  config_manager.py  config_schema.py  decision.py  diagnostics.py  extractor.py  fingerprint.py  models.py  registry.py  registry_io.py  revalidation.py  scoring.py  service.py  static_service.py  url_paths.py  validation.py
novel_crawler/application/: __init__.py  composition.py  errors.py  models.py  pipeline.py  service.py  site_adapter.py
novel_crawler/browser/: __init__.py  adaptive.py  coordinator.py  driver.py  models.py  proxy.py  sessions.py
novel_crawler/configs/: example.json  example.yaml
novel_crawler/core/: chapter_quality.py  config.py  crawler.py  dedup.py  domains.py  fetcher.py  models.py  proxy_pool.py  storage.py  title_fixer.py  url_paths.py  utils.py  validator.py
novel_crawler/decoders/: base.py  font_shape.py
novel_crawler/exporters/: base.py  epub.py  markdown.py  txt.py
novel_crawler/runtime/: env.py
novel_crawler/sites/: auto.py  base.py  bqg.py  detector.py  generic.py  router.py  shuyous.py  twbook.py
novel_crawler/task_engine/: __init__.py  chapter_batch.py  executor.py  integration.py  models.py  repository.py
tests/: test_basic.py  test_cli.py  test_compliance.py  test_distribution.py  test_domains.py  test_easyvoice.py  test_exploration.py  test_mojibake.py  test_package.py  test_quality_boundaries.py  test_runtime_env.py  test_shuyous_adapter.py  test_site_adaptation.py  test_source_encoding.py
tests/web/: test_web.py
(+44 files in other folders)
